<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.RegisterActivity">

    <TextView
        android:id="@+id/TitleRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_register"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/purple_500"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imgLogoRegister"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/logo_icon_foreground"
        android:contentDescription="@string/logo_description"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/TitleRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etRegisterNames"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:minHeight="48dp"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/rounded_input_background"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/hint_names"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        app:layout_constraintTop_toBottomOf="@+id/imgLogoRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etRegisterLastnames"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:background="@drawable/rounded_input_background"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/hint_last_names"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/etRegisterNames"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/etRegisterUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:background="@drawable/rounded_input_background"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/hint_username"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/etRegisterLastnames"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etRegisterNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:minHeight="48dp"
        android:inputType="text"
        android:background="@drawable/rounded_input_background"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/hint_phone_number"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/etRegisterUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@drawable/rounded_input_background"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/hint_password"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/etRegisterNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etRegisterEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_input_background"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/hint_email"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/etRegisterPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/purple_500"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/etRegisterEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtGoToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_link"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>