<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.LoginActivity">

    <!-- Título del formulario -->
    <TextView
        android:id="@+id/TitleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/purple_500"
        android:layout_marginTop="156dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Logo debajo del título -->
    <ImageView
        android:id="@+id/imgLogoLogin"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/logo_icon_foreground"
        android:contentDescription="@string/logo_description"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/TitleLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etLoginEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_input_background"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/hint_email"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginTop="42dp"
        app:layout_constraintTop_toBottomOf="@id/imgLogoLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@drawable/rounded_input_background"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/hint_password"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/etLoginEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/purple_500"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/etLoginPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtGoToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register_link"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>