<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/border_curve"
    android:layout_marginBottom="10dp"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imgProductSaleDetails"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:src="@mipmap/logo_icon_foreground"
        android:contentDescription="@string/logo_description" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtProductNameSaleDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sale_details_product_name"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/txtQuantitySaleDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sale_details_products_quantity"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtSubtotalSaleDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sale_details_subtotal"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>