<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:background="@drawable/border_curve"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageView
        android:id="@+id/iv_product_image_1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="18dp"
        android:padding="4dp"
        android:background="@drawable/border_curve"
        android:src="@mipmap/bag_icon_foreground" />

    <!-- Contenedor para textos -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/txtOrderNumberPItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sale_order_number"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtProductsPItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/sale_products_quantity"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:gravity="end">

        <TextView
            android:id="@+id/txtDatePItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sale_date"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/txtTotalAmountPItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/sale_total_amount"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="12dp" />
    </LinearLayout>
</LinearLayout>