<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/background_color"
    tools:context=".ui.ProfileActivity">

    <include
        android:id="@+id/header"
        layout="@layout/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <!-- Contenedor de tarjeta 1 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/gray_second"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="14dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_profile"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <!-- Imagen -->
            <ImageView
                android:id="@+id/imgPictureProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="22dp"
                android:contentDescription="@string/profile_image"
                android:scaleType="fitCenter"
                android:src="@mipmap/default_user_profile"
                android:background="@drawable/image_rounded"/>

            <!-- Username -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_username"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginHorizontal="30dp"/>

            <EditText
                android:id="@+id/etUsernameProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:inputType="text"
                android:padding="8dp"
                android:minHeight="48dp"
                android:background="@drawable/rounded_input_background"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:hint="@string/hint_username"
                android:layout_marginHorizontal="30dp"
                android:enabled="false"/>

            <!-- Email -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_email"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="30dp"/>

            <EditText
                android:id="@+id/etEmailProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:background="@drawable/rounded_input_background"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="@string/hint_email"
                android:padding="8dp"
                android:minHeight="48dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="3dp"
                android:enabled="false"/>

            <!-- Names -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_names"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="30dp"/>

            <EditText
                android:id="@+id/etNamesProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@drawable/rounded_input_background"
                android:padding="8dp"
                android:minHeight="48dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:hint="@string/hint_names"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="3dp"
                android:enabled="false"/>

            <!-- Last Names -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_last_names"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="30dp"/>

            <EditText
                android:id="@+id/etLastnamesProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@drawable/rounded_input_background"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:hint="@string/hint_last_names"
                android:padding="8dp"
                android:minHeight="48dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="3dp"
                android:enabled="false"/>

            <!-- Phone Number -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_phone_number"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="30dp"/>

            <EditText
                android:id="@+id/etTelephoneProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@drawable/rounded_input_background"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:hint="@string/hint_phone_number"
                android:padding="8dp"
                android:minHeight="48dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="3dp"
                android:enabled="false"/>

            <!-- Account ID -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/count_id_profile"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="30dp"/>

            <EditText
                android:id="@+id/etAccountIdProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@drawable/rounded_input_background"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:hint="@string/count_id_profile"
                android:padding="8dp"
                android:minHeight="48dp"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="3dp"
                android:enabled="false"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>